@@ -1,5 +1,9 @@
 2012-09-18  Ramon Casero  <rcasero@gmail.com>
 
+	* Add matlab/FiltersToolbox/ccwrap.m: (v0.1.0)
+
+	- Wrapper that enables CTRL+C interruption of MEX files.
+
 	* CMakeLists.txt: (v0.2.1)
 	* cpp/src/third-party/boost/boost/chrono/CMakeLists.txt:
 	* cpp/src/third-party/boost/boost/date_time/CMakeLists.txt:
